implement 07-coldstart-suite: JFR startup timing, CompilationMXBean, child JVM measurement, concurrent harness
Co-Authored-By: Claude Sonnet 4.6 (1M context) <noreply@anthropic.com>